	* improved error message for python setup script
	* fixed bug when torrent file included announce-list, but no valid
	  tracker urls
	* fixed bug where the files requested from web seeds would be the
	  renamed file names instead of the original file names in the torrent.
	* documentation fix of queing section
	* fixed potential issue in udp_socket (affected udp tracker support)

release 0.14.1

	* added converter for python unicode strings to utf-8 paths
	* fixed bug in http downloader where the host field did not
	  include the port number
	* fixed headers to not depend on NDEBUG, which would prohibit
	  linking a release build of libtorrent against a debug application
	* fixed bug in disk I/O thread that would make the thread
	  sometimes quit when an error occurred
	* fixed DHT bug
	* fixed potential shutdown crash in disk_io_thread
	* fixed usage of deprecated boost.filsystem functions
	* fixed http_connection unit test
	* fixed bug in DHT when a DHT state was loaded
	* made rate limiter change in 0.14 optional (to take estimated
	  TCP/IP overhead into account)
	* made the python plugin buildable through the makefile
	* fixed UPnP bug when url base ended with a slash and
	  path started with a slash
	* fixed various potentially leaking exceptions
	* fixed problem with removing torrents that are checking
	* fixed documentation bug regarding save_resume_data()
	* added missing documentation on torrent creation
	* fixed bugs in python client examples
	* fixed missing dependency in package-config file
	* fixed shared geoip linking in Jamfile
	* fixed python bindings build on windows and made it possible
	  to generate a windows installer
	* fixed bug in NAT-PMP implementation

release 0.14

	* deprecated add_torrent() in favor of a new add_torrent()
	  that takes a struct with parameters instead. Torrents
	  are paused and auto managed by default.
	* removed 'connecting_to_tracker' torrent state. This changes
	  the enum values for the other states.